7901890: Include incubator modules in jtreg's view of system modules
Co-authored-by: Chris Hegarty <chris.hegarty@oracle.com>